--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "name": "indiecert/enroll",
     "require": {
         "fkooman/config": "^1.0.0",
+        "fkooman/http": "^1.0.0",
         "fkooman/io": "^1.0.0",
         "fkooman/rest": "^1.0.1",
+        "fkooman/tpl": "^2.0.0",
         "fkooman/tpl-twig": "^1.0.0",
-        "php": ">=5.3.0",
         "phpseclib/phpseclib": "^2.0.0"
     }
 }
